# sd-proto-bench

./: .gitignore  Cargo.toml  Makefile  README.md  bench.js  package-lock.json  package.json
sd_wasm/: Cargo.toml
sd_wasm/src/: lib.rs
securedrop-protocol/: Cargo.toml  bench.js
securedrop-protocol/src/: lib.rs
securedrop-protocol/src/bench/: encrypt_decrypt.rs  mod.rs  submit.rs
securedrop-protocol/tests/: bench_loops.rs  core.rs
www/: index.html
