[package]
name = "sd_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
libcrux-ecdh = "0.0.3"
hpke-rs = { version = "0.3", default-features = false }
hpke-rs-libcrux = { version = "0.3", default-features = false }
rand_core = { version = "0.9", features = ["os_rng"] }
rand = { version = "0.9", features = ["std"] }
